# grits

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  Test run.ipynb  cg_compound.py  codecov.yml  environment-dev.yml  environment.yml  fine-grain-grits-example-polyalanine.ipynb  fine-grain-grits-example-polystyrene.ipynb  fine-grain-grits-example.ipynb  grits.ipynb  pyproject.toml  setup.py  utils.py
.github/: CHANGELOG.md  CONTRIBUTING.md
.github/workflows/: build.yml  build_cpu-tagged.yml  build_cpu.yml  pytest.yml
containers/: dockerfile_cpu
docs/: coarsegrain.rst  conf.py  environment-docs.yml  finegrain.rst  grits.rst  index.rst  installation.rst  introduction.rst  license.rst  requirements.txt  tutorial.rst  utils.rst
docs/source/: coarsegrain.rst  conf.py  finegrain.rst
docs/tutorials/: grits.rst  grits_system.rst  tutorials.rst
examples/: grits.ipynb  grits_system.ipynb
grits/: __init__.py  __version__.py  backmap.py  cg_compound.py  cg_gsd.py  coarsegrain.py  finegrain.py  utils.py  writers.py
grits/compounds/: P3HT_16.mol2
grits/tests/: base_test.py  test_backmap.py  test_cgcompound.py  test_coarsegrain.py  test_finegrain.py  test_imports.py  test_utils.py
grits/tests/assets/: P3HT_16.mol2  benzene-aa.gsd  benzene-ua.gsd  four-pps-rotating.gsd  itic-p3ht.gsd  one-pps.gsd  p3ht-noH.gsd  p3ht.gsd  pps-aa.gsd  pps-ua.gsd  rotating-pps.gsd
